# steam_library_exporter

./: .gitignore  AGENTS.md  LICENSE  pyproject.toml  steam_export.py  steam_export_gui.py  steam_export_gui.pyw
.github/workflows/: ci.yml  export.yml  pages.yml  publish.yml
config/: col_groups.toml  i18n.toml  settings.toml
config/lang/: en_us.toml  zh_cn.toml
docs/: CHANGELOG.md  README.md
frontend/: app.js  index.html  style.css
frontend/i18n/: en_us.json  zh_cn.json
scripts/: build_i18n_json.py  cors-proxy.js
sle/: __init__.py  engine.py  exporters.py  gui.py
